--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
         </video>
     </header>
     <div id="scroll-menue">
-        <div class="sond-toggle">
             <img id="sond-nav" src="image/black-on.svg" alt="">
-        </div>
     </div>
     <div class="espacement-hauteur"></div>
     <div class="contenaire">
@@ -74,15 +72,15 @@
         <h2 style="color: white;">L’impact de Genshin</h2>
         <img class="separation-svg-footer"  src="image/footer-limitation.svg" alt="">
         <div class="espacement-footer"></div>
-        <a href=""><h3>Accueil</h3></a>
+        <a href="index.html"><h3>Accueil</h3></a>
         <div class="espacement-footer"></div>
-        <a href=""><h3>Nos données</h3></a>
+        <a href="data.html"><h3>Nos données</h3></a>
         <div class="espacement-footer"></div>
-        <a href=""><h3>Nos personnages</h3></a>
+        <a href="charactere.html"><h3>Nos personnages</h3></a>
         <div class="espacement-footer"></div>
-        <a href=""><h3>Mentions légales</h3></a>
+        <a href="mentions.html"><h3>Mentions légales</h3></a>
         <div class="espacement-footer"></div>
-        <a href=""><img src="image/star-footer.svg" alt="">
+        <a href="https://www.youtube.com/watch?v=4xnsmyI5KMQ&t=28s&pp=ygUNZHJhZ29uIGRhbmNlIA%3D%3D"><img src="image/star-footer.svg" alt="">
     </footer>
     <script src="js/night_day.js"></script>
 </body>
