--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </audio>
 
         <div class="home-page-title">
-            <h1> L’impact de Genshin </h1>
-            <img class="separation-svg-header" src="image/header-limitation.svg" alt="">
-            <h2 style="color: white;"> Voir quel texte écrire </h2>
+            <h1 id="h1"> L’impact de Genshin </h1>
+            <img id="separation-svg-header" class="separation-svg-header" src="image/header-limitation-white.svg" alt="">
+            <h2 id="h2" style="color: white;"> Voir quel texte écrire </h2>
         </div>
 
         <video autoplay muted loop id="dayHomePage" class="annim_home_page_day">
