ajout menue sandich

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <header>
         <div class="theme-toggle">
             <img id="day" src="image/white-day.svg" alt="">
-            <img id="night" src="image/white-night.svg" alt="">
         </div>
         <div class="sond-toggle">
             <img id="sond" src="image/white-on.svg" alt="">
@@ -25,7 +24,8 @@
 
         <div class="home-page-title">
             <h1 id="h1"> L’impact de Genshin </h1>
-            <img id="separation-svg-header" class="separation-svg-header" src="image/header-limitation-white.svg" alt="">
+            <img id="separation-svg-header" class="separation-svg-header" src="image/header-limitation-white.svg"
+                alt="">
             <h2 id="h2" style="color: white;"> Voir quel texte écrire </h2>
         </div>
 
@@ -39,7 +39,9 @@
         </video>
     </header>
     <div id="scroll-menue">
-            <img id="sond-nav" src="image/black-on.svg" alt="">
+        <img id="sanditch-nav" src="image/sandwitch.svg" alt="">
+        <img id="day-nav" src="image/white-day.svg" alt="">
+        <img id="sond-nav" src="image/white-on.svg" alt="">
     </div>
     <div class="espacement-hauteur"></div>
     <div class="contenaire">
@@ -70,17 +72,26 @@
 
     <footer>
         <h2 style="color: white;">L’impact de Genshin</h2>
-        <img class="separation-svg-footer"  src="image/footer-limitation.svg" alt="">
+        <img class="separation-svg-footer" src="image/footer-limitation.svg" alt="">
         <div class="espacement-footer"></div>
-        <a href="index.html"><h3>Accueil</h3></a>
+        <a href="index.html">
+            <h3>Accueil</h3>
+        </a>
         <div class="espacement-footer"></div>
-        <a href="data.html"><h3>Nos données</h3></a>
+        <a href="data.html">
+            <h3>Nos données</h3>
+        </a>
         <div class="espacement-footer"></div>
-        <a href="charactere.html"><h3>Nos personnages</h3></a>
+        <a href="charactere.html">
+            <h3>Nos personnages</h3>
+        </a>
         <div class="espacement-footer"></div>
-        <a href="mentions.html"><h3>Mentions légales</h3></a>
+        <a href="mentions.html">
+            <h3>Mentions légales</h3>
+        </a>
         <div class="espacement-footer"></div>
-        <a href="https://www.youtube.com/watch?v=4xnsmyI5KMQ&t=28s&pp=ygUNZHJhZ29uIGRhbmNlIA%3D%3D"><img src="image/star-footer.svg" alt="">
+        <a href="https://www.youtube.com/watch?v=4xnsmyI5KMQ&t=28s&pp=ygUNZHJhZ29uIGRhbmNlIA%3D%3D"><img
+                src="image/star-footer.svg" alt="">
     </footer>
     <script src="js/night_day.js"></script>
 </body>
