--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         </audio>
 
         <div class="home-page-title">
-            <h1 id="h1"> L’impact de Genshin </h1>
+            <h1 id="h1-titre"> L’impact de Genshin </h1>
             <img id="separation-svg-header" class="separation-svg-header" src="image/header-limitation-white.svg"
                 alt="">
-            <h2 id="h2" style="color: white;"> Voir quel texte écrire </h2>
+            <h2 id="h2-titre" style="color: white;"> Voir quel texte écrire </h2>
         </div>
 
         <video autoplay muted loop id="dayHomePage" class="annim_home_page_day">
             <source src="animation/genshin-jour.mp4" type="video/mp4">
         </video>
-        <div class="gradient-overlay"></div>
+        <div id="gradient-overlay" class="gradient-overlay"></div>
 
         <video autoplay muted loop id="nightHomePage" class="annim_home_page_night">
             <source src="animation/genshin-nuit.mp4" type="video/mp4">
@@ -45,15 +45,15 @@
     </div>
     <div class="espacement-hauteur"></div>
     <div class="contenaire">
-        <h2>Titre de l’article</h2>
-        <p>Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
+        <h2 id="h2">Titre de l’article</h2>
+        <p id="p">Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
             Justo sed hendrerit consectetur eu ut ullamcorper pellentesque velit. Sagittis ut eget pharetra mauris leo
             diam. Scelerisque vitae tempor nullam netus rhoncus commodo. Nisl magna ultrices vitae ac. Aliquam in
             pellentesque risus commodo volutpat et euismod malesuada ut. Nunc rutrum nulla dolor est. Sed molestie
             libero fames nulla nisi ut magna eget interdum. Tristique scelerisque tellus dui lobortis iaculis elementum.
             Molestie vestibulum venenatis mi nunc.</p>
 
-        <p>Sed interdum risus semper justo sit sed duis ut ut. Integer consequat malesuada sed elementum ultrices amet.
+        <p id="p">Sed interdum risus semper justo sit sed duis ut ut. Integer consequat malesuada sed elementum ultrices amet.
             Urna habitasse diam tellus nullam ultrices ipsum erat mattis. Adipiscing mauris viverra scelerisque mattis
             netus aliquet mauris tincidunt sodales. Et in vel nulla pretium duis adipiscing vulputate ultricies. Quis
             integer tempor risus nullam amet arcu enim risus. Aliquam eget quisque sed nibh maecenas vitae amet
@@ -61,7 +61,7 @@
             Vestibulum dolor suscipit tristique morbi. Egestas enim ac viverra odio ac quis. Fringilla scelerisque odio
             mattis pulvinar nunc volutpat.</p>
 
-        <p>Lorem ipsum dolor sit amet consectetur. Sed pharetra in morbi erat. Commodo scelerisque quis ultricies
+        <p id="p">Lorem ipsum dolor sit amet consectetur. Sed pharetra in morbi erat. Commodo scelerisque quis ultricies
             laoreet amet dolor lobortis. Risus montes gravida et massa velit phasellus. Tempus gravida viverra facilisis
             mi. Id facilisi eget habitasse quis tempor. Aliquam ut cursus phasellus vitae proin at facilisi parturient
             ullamcorper. Mollis pellentesque nunc senectus nisl nunc. Praesent turpis donec porttitor aenean. Sagittis
@@ -70,7 +70,7 @@
     </div>
 
 
-    <footer>
+    <footer id="footer">
         <h2 style="color: white;">L’impact de Genshin</h2>
         <img class="separation-svg-footer" src="image/footer-limitation.svg" alt="">
         <div class="espacement-footer"></div>
