vfinal sans, manque footer

--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
 
 <body>
     <header>
-        <div class="theme-toggle">
-            <img id="day" src="image/white-day.svg" alt="">
-        </div>
-        <div class="sond-toggle">
-            <img id="sond" src="image/white-on.svg" alt="">
-        </div>
-
         <audio id="backgroundMusic" loop>
             <source src="musique/main-music.mp3" type="audio/mp3">
         </audio>
@@ -38,7 +31,31 @@
             <source src="animation/genshin-nuit.mp4" type="video/mp4">
         </video>
     </header>
-    
+    <div id="barre-menu">
+        <img id="close-nav" src="image/black-close.svg" alt="">
+        <nav>
+            <div>
+                <a href="index.html">
+                    <h2>Accueil</h2>
+                </a>
+                <a href="data.html">
+                    <h2>Nos données</h2>
+                </a>
+                <a href="charactere.html">
+                    <h2>Nos personnages</h2>
+                </a>
+            </div>
+            <div style="margin-top: 100px;">
+                <a href="mentions.html" style="margin-top: 100%;">
+                    <h2>Mentions légales</h2>
+                </a>
+                <div id="menue-menue">
+                    <img id="day-menue" src="image/white-day.svg" alt="">
+                    <img id="sond-menue" src="image/white-on.svg" alt="">
+                </div>
+            </div>
+        </nav>
+    </div>
     <div id="scroll-menue">
         <img id="sanditch-nav" src="image/sandwitch.svg" alt="">
         <img id="day-nav" src="image/white-day.svg" alt="">
@@ -47,14 +64,16 @@
     <div class="espacement-hauteur"></div>
     <div class="contenaire">
         <h2 id="h2">Titre de l’article</h2>
-        <p id="p">Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
+        <p id="p">Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum
+            fusce.
             Justo sed hendrerit consectetur eu ut ullamcorper pellentesque velit. Sagittis ut eget pharetra mauris leo
             diam. Scelerisque vitae tempor nullam netus rhoncus commodo. Nisl magna ultrices vitae ac. Aliquam in
             pellentesque risus commodo volutpat et euismod malesuada ut. Nunc rutrum nulla dolor est. Sed molestie
             libero fames nulla nisi ut magna eget interdum. Tristique scelerisque tellus dui lobortis iaculis elementum.
             Molestie vestibulum venenatis mi nunc.</p>
 
-        <p id="p">Sed interdum risus semper justo sit sed duis ut ut. Integer consequat malesuada sed elementum ultrices amet.
+        <p id="p">Sed interdum risus semper justo sit sed duis ut ut. Integer consequat malesuada sed elementum ultrices
+            amet.
             Urna habitasse diam tellus nullam ultrices ipsum erat mattis. Adipiscing mauris viverra scelerisque mattis
             netus aliquet mauris tincidunt sodales. Et in vel nulla pretium duis adipiscing vulputate ultricies. Quis
             integer tempor risus nullam amet arcu enim risus. Aliquam eget quisque sed nibh maecenas vitae amet
