Add base chara + reset

--- a/charactere.html
+++ b/charactere.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+
     <link rel="stylesheet" href="font/font.css">
+    <link rel="stylesheet" href="css/charactere.css">
     <title>Impact de Genshin - Nos personnages</title>
 </head>
+
 <body>
-    
+
+
+    <div id="blocHaut">
+
+        <div id="blocGaucheHaut">
+            <div id="blocPerso">
+                <img src="/impact-de-genshin/image/charactere/eyesDendro.png" alt="oeuil divin de inazuma de Dendro">
+                <img src="/impact-de-genshin/image/charactere/tete1.png" alt="tete de Katorea">
+                <img src="/impact-de-genshin/image/charactere/tete2.png" alt="tete de Rainer">
+            </div>
+
+            <h1 style="color: #CFBD93;">Dendro / Katorea</h1>
+
+        </div>
+
+        <h3><a href="index.html">Retour à l'acceuil</a></h3>
+    </div>
+
+
+
+
+
 </body>
+
 </html>
