reparation des bug video remis a jour

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
         </audio>
 
         <div class="home-page-title">
-            <h1 id="h1-titre"> L’impact de Genshin </h1>
-            <img id="separation-svg-header" class="separation-svg-header" src="image/header-limitation-white.svg"
+            <h1 id="h1-titre" style="margin-top: -100px; color: rgb(0, 0, 0);"> L’impact de Genshin </h1>
+            <img id="separation-svg-header" class="separation-svg-header" src="image/header-limitation-black.svg"
                 alt="">
-            <h2 id="h2-titre" style="color: white;"> Voir quel texte écrire </h2>
+            <h2 id="h2-titre" style="color: rgb(0, 0, 0);"> Voir quel texte écrire </h2>
         </div>
+        <video autoplay muted loop id="nightHomePage" class="annim_home_page_night">
+            <source src="animation/genshin-nuit.mp4" type="video/mp4">
+        </video>
 
         <video autoplay muted loop id="dayHomePage" class="annim_home_page_day">
             <source src="animation/genshin-jour.mp4" type="video/mp4">
         </video>
         <div id="gradient-overlay" class="gradient-overlay"></div>
 
-        <video autoplay muted loop id="nightHomePage" class="annim_home_page_night">
-            <source src="animation/genshin-nuit.mp4" type="video/mp4">
-        </video>
     </header>
     <div id="barre-menu">
         <img id="close-nav" src="image/black-close.svg" alt="">
