ajout du blur sur la nav

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div id="gradient-overlay" class="gradient-overlay"></div>
 
     </header>
+    <div id="conteneur-flou"></div>
     <div id="barre-menu">
         <img id="close-nav" src="image/black-close.svg" alt="">
         <nav>
