--- a/mentions.html
+++ b/mentions.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/mentions.css">
     <link rel="stylesheet" href="font/font.css">
     <title>Impact de Genshin - Mentions légales</title>
 </head>
-<body>
+
+<body id="mentions">
+
+    <h2>Mentions légales</h2>
+
+    <h3>Site édité par :</h3>
+    <p>Nino Lefort</p>
+    <p>07 81 64 85 09</p>
+    <p>nino.lefort@mmibordeaux.com</p>
+    <p>33 avenue de Picot</p>
+    <p>33160 Eysines</p>
+
+
+
+    <h3>Site hébergé par :</h3>
+    <p>Hébergeur du site</p>
+    <p>Société Netlify</p>
+    <p>44 Montgomery Street, Suite 300</p>
+    <p>San Francisco, California 94104</p>
+    <p>support@netlify.com</p>
+
+    <h3>Source :</h3>
+    <p><a target="_blank" href="https://genshinlab.com/genshin-impact-revenue-chart/">Genshin Lab</a></p>
+
+    <h3>Tableau de données crées :</h3>
+    <p><a target="_blank" href="https://docs.google.com/spreadsheets/d/1gyHDBqRzyk1E1J7hyVR2AcEhotUTDCheKO6kVbVHACk/edit?usp=sharing">Tableur de données</a></p>
     
+    <p>Dernière mise à jour à 08/01/2023</p>
+
+    <h3>Musique :</h3>
+    <p>Musique de Genshin</p>
+
+    <h3>Vidéo :</h3>
+    <p>Vidéo de la page d’accueil:</p>
+    <p>Tiré du jeux <a target="_blank" href="https://genshin.hoyoverse.com/fr">Genshin Impact</a></p>
+
+    <h3>Equipe :</h3>
+    <p>Elodie Laisne :</p>
+    <p><a target="_blank" href="https://www.linkedin.com/in/elodie-laisne-a12987252/">Linkedin</a></p>
+    <p>Mael Ledrin :</p>
+    <p><a target="_blank" href="https://thesloum-ml.netlify.app/">Site Web</a></p>
+    <p><a target="_blank" href="https://www.linkedin.com/in/ma%C3%ABl-l-900945252/">Linkedin</a></p>
+    <p>Nino Lefort :</p>
+    <p><a target="_blank" href="https://nino-lefort-cv.netlify.app/">Site Web</a></p>
+    <p><a target="_blank" href="https://www.linkedin.com/in/nino-lefort-6b0938251/">Linkedin</a></p>
+    <p>Julie Rondof :</p>
+    <p><a target="_blank" href="https://portfoliorondof.netlify.app/">Site Web</a></p>
+    <p><a target="_blank" href="https://www.linkedin.com/in/julie-rondof/">Linkedin</a></p>
+
+
+    <h3>Remerciement :</h3>
+    <p>MMI Bordeaux</p>
+    <p>Frédéric Sallet</p>
+
 </body>
+
 </html>
