--- a/charactere.html
+++ b/charactere.html
@@ -5,22 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
-
+    <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/charactere.css">
     <title>Impact de Genshin - Nos personnages</title>
 </head>
 
 <body>
-
+    <div id="conteneur-flou"></div>
+    <div id="barre-menu">
+        <img id="close-nav" src="image/black-close.svg" alt="">
+        <nav>
+            <div>
+                <a href="index.html">
+                    <h2>Accueil</h2>
+                </a>
+                <a href="data.html">
+                    <h2>Nos données</h2>
+                </a>
+                <a href="charactere.html">
+                    <h2>Nos personnages</h2>
+                </a>
+            </div>
+            <div style="margin-top: 100px;">
+                <a href="mentions.html" style="margin-top: 100%;">
+                    <h2>Mentions légales</h2>
+                </a>
+                <div id="menue-menue">
+                    <img id="day-menue" src="image/white-day.svg" alt="">
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div id="scroll-menue">
+        <img id="sanditch-nav" src="image/sandwitch.svg" alt="">
+        <img id="day-nav" src="image/white-day.svg" alt="">
+    </div>
 
     <div id="blocHaut">
 
         <div id="blocGaucheHaut">
             <div id="blocPerso">
-                <img src="/impact-de-genshin/image/charactere/eyesDendro.png" alt="oeuil divin de inazuma de Dendro">
-                <img src="/impact-de-genshin/image/charactere/tete1.png" alt="tete de Katorea">
-                <img src="/impact-de-genshin/image/charactere/tete2.png" alt="tete de Rainer">
+                <img src="image/charactere/eyesDendro.png" alt="oeuil divin de inazuma de Dendro">
+                <img src="image/charactere/tete1.png" alt="tete de Katorea">
+                <img src="image/charactere/tete2.png" alt="tete de Rainer">
             </div>
 
             <h1 style="color: #CFBD93;">Dendro / Katorea</h1>
@@ -32,8 +60,30 @@
 
 
 
-
-
+    <footer id="footer">
+        <h2 style="color: white;">L’impact de Genshin</h2>
+        <img class="separation-svg-footer" src="image/footer-limitation.svg" alt="">
+        <div class="espacement-footer"></div>
+        <a href="index.html">
+            <h3>Accueil</h3>
+        </a>
+        <div class="espacement-footer"></div>
+        <a href="data.html">
+            <h3>Nos données</h3>
+        </a>
+        <div class="espacement-footer"></div>
+        <a href="charactere.html">
+            <h3>Nos personnages</h3>
+        </a>
+        <div class="espacement-footer"></div>
+        <a href="mentions.html">
+            <h3>Mentions légales</h3>
+        </a>
+        <div class="espacement-footer"></div>
+        <a href="https://www.youtube.com/watch?v=4xnsmyI5KMQ&t=28s&pp=ygUNZHJhZ29uIGRhbmNlIA%3D%3D"><img
+                src="image/star-footer.svg" alt="">
+    </footer>
+    <script src="js/footer_header.js"></script>
 </body>
 
 </html>
