--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="font/font.css">
+    <link rel="stylesheet" href="css/header_footer.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Impact de Genshin - Acceuil</title>
 </head>
 
@@ -47,7 +49,7 @@
                 </a>
             </div>
             <div style="margin-top: 100px;">
-                <a href="mentions.html" style="margin-top: 100%;">
+                <a href="mentions.html">
                     <h2>Mentions légales</h2>
                 </a>
                 <div id="menue-menue">
