--- a/mentions.html
+++ b/mentions.html
@@ -6,11 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/mentions.css">
+    <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="font/font.css">
     <title>Impact de Genshin - Mentions légales</title>
 </head>
 
-<body id="mentions">
+<body>
+    <div id="conteneur-flou"></div>
+    <div id="barre-menu">
+        <img id="close-nav" src="image/black-close.svg" alt="">
+        <nav>
+            <div>
+                <a href="index.html">
+                    <h2>Accueil</h2>
+                </a>
+                <a href="data.html">
+                    <h2>Nos données</h2>
+                </a>
+                <a href="charactere.html">
+                    <h2>Nos personnages</h2>
+                </a>
+            </div>
+            <div style="margin-top: 100px;">
+                <a href="mentions.html" style="margin-top: 100%;">
+                    <h2>Mentions légales</h2>
+                </a>
+                <div id="menue-menue">
+                    <img id="day-menue" src="image/white-day.svg" alt="">
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div id="scroll-menue">
+        <img id="sanditch-nav" src="image/sandwitch.svg" alt="">
+        <img id="day-nav" src="image/white-day.svg" alt="">
+    </div>
 
     <h2>Mentions légales</h2>
 
@@ -62,7 +92,31 @@
     <h3>Remerciement :</h3>
     <p>MMI Bordeaux</p>
     <p>Frédéric Sallet</p>
-
+    
+    <footer id="footer">
+        <h2 style="color: white;">L’impact de Genshin</h2>
+        <img class="separation-svg-footer" src="image/footer-limitation.svg" alt="">
+        <div class="espacement-footer"></div>
+        <a href="index.html">
+            <h3>Accueil</h3>
+        </a>
+        <div class="espacement-footer"></div>
+        <a href="data.html">
+            <h3>Nos données</h3>
+        </a>
+        <div class="espacement-footer"></div>
+        <a href="charactere.html">
+            <h3>Nos personnages</h3>
+        </a>
+        <div class="espacement-footer"></div>
+        <a href="mentions.html">
+            <h3>Mentions légales</h3>
+        </a>
+        <div class="espacement-footer"></div>
+        <a href="https://www.youtube.com/watch?v=4xnsmyI5KMQ&t=28s&pp=ygUNZHJhZ29uIGRhbmNlIA%3D%3D"><img
+                src="image/star-footer.svg" alt="">
+    </footer>
+    <script src="js/footer_header.js"></script>
 </body>
 
 </html>
