responsive metion legal

--- a/mentions.html
+++ b/mentions.html
@@ -44,7 +44,7 @@
     <div class="contenaire">
         <h2>Mentions légales</h2>
         <div class="text-contenaire">
-            <div class="part1-contenaire">
+            <div class="text-box1">
                 <h3>Source :</h3>
                 <p><a target="_blank" href="https://genshinlab.com/genshin-impact-revenue-chart/">Genshin Lab</a></p>
 
@@ -83,7 +83,7 @@
                     <p><a target="_blank" href="https://www.linkedin.com/in/julie-rondof/">Linkedin</a></p>
                 </div>
             </div>
-
+            <div class="espacement-contenaire"></div>
             <div>
                 <h3>Site édité par :</h3>
                 <p>Nino Lefort</p>
