--- a/charactere.html
+++ b/charactere.html
@@ -48,7 +48,7 @@
         </div>
         <div class="top-conteneur">
             <h1>Dendro / Katorea</h1>
-           <a href=""><h3>Retour à l’accueil</h3></a> 
+           <a href="index.html"><h3>Retour à l’accueil</h3></a> 
         </div>
     </div>
 </body>
