initiation 2 eme pasge charactere

--- a/2charactere.html
+++ b/2charactere.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
-
     <link rel="stylesheet" href="font/font.css">
-    <link rel="stylesheet" href="css/charactere.css">
+    <link rel="stylesheet" href="css/2charactere.css">
     <title>Impact de Genshin - Nos personnages</title>
 </head>
 
@@ -15,39 +14,39 @@
     <div id="blocHaut">
         <div id="blocGaucheHaut">
             <div id="blocPerso">
-                <img class="eyes" src="image/charactere/eyesDendro.png" alt="oeuil divin de inazuma de Dendro">
+                <img class="eyes" src="image/charactere/eyesRainer.png" alt="oeuil divin de inazuma de Dendro">
                 <div class="equar"></div>
                 <div class="end"></div>
-                <img src="image/charactere/tete1.png" alt="tete de Katorea">
-                <img src="image/charactere/tete2.png" alt="tete de Rainer">
+                <a href="1charactere.html"><img src="image/charactere/tete1.png" alt="tete de Katorea"></a>
+                <a href="2charactere.html"><img src="image/charactere/tete2.png" alt="tete de Rainer"></a>
             </div>
         </div>
         <div class="conteneur-text">
-            <h2>Plouf</h2>
-            <h3>Voix : Nino Lefort</h3>
+            <h2>Rainer</h2>
+            <h3>Voix : Mael Ledrin</h3>
             <div class="separation"></div>
             <div class="text-reponce">
                 <h3>Arme utilisée</h3>
-                <h3>Lance</h3>
+                <h3>Arme à 2 mains</h3>
             </div>
             <div class="text-reponce">
                 <h3>Anniversaire</h3>
-                <h3>28/04</h3>
+                <h3>23/11</h3>
             </div>
             <div class="text-reponce">
                 <h3>Affiliation</h3>
-                <h3>XX</h3>
+                <h3>Fatui</h3>
             </div>
             <div class="text-reponce">
                 <h3>Pays</h3>
-                <h3>Inazuma</h3>
+                <h3>Mondstaldt</h3>
             </div>
             <div class="separation"></div>
             <h3>Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
             </h3>
         </div>
         <div class="top-conteneur">
-            <h1>Dendro / Katorea</h1>
+            <h1>Pyro / Rainer</h1>
            <a href="index.html"><h3>Retour à l’accueil</h3></a> 
         </div>
     </div>
