--- a/data.html
+++ b/data.html
@@ -20,7 +20,7 @@
                 <a href="data.html">
                     <h2>Nos données</h2>
                 </a>
-                <a href="charactere.html">
+                <a href="1charactere.html">
                     <h2>Nos personnages</h2>
                 </a>
             </div>
@@ -51,7 +51,7 @@
             <h3>Nos données</h3>
         </a>
         <div class="espacement-footer"></div>
-        <a href="charactere.html">
+        <a href="1charactere.html">
             <h3>Nos personnages</h3>
         </a>
         <div class="espacement-footer"></div>
