inversement du mode nuit est jour
non

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <h2>Mentions légales</h2>
                 </a>
                 <div id="menue-menue">
-                    <img id="day-menue" src="image/white-day.svg" alt="">
+                    <img id="day-menue" src="image/white-night.svg" alt="">
                     <img id="sond-menue" src="image/white-on.svg" alt="">
                 </div>
             </div>
@@ -61,7 +61,7 @@
     </div>
     <div id="scroll-menue">
         <img id="sanditch-nav" src="image/sandwitch.svg" alt="">
-        <img id="day-nav" src="image/white-day.svg" alt="">
+        <img id="day-nav" src="image/white-night.svg" alt="">
         <img id="sond-nav" src="image/white-on.svg" alt="">
     </div>
     <div class="espacement-hauteur"></div>
