--- a/mentions.html
+++ b/mentions.html
@@ -32,14 +32,14 @@
                     <h2>Mentions légales</h2>
                 </a>
                 <div id="menue-menue">
-                    <img id="day-menue" src="image/white-day.svg" alt="">
+                    <img id="day-menue" src="image/white-night.svg" alt="">
                 </div>
             </div>
         </nav>
     </div>
     <div id="scroll-menue">
         <img id="sanditch-nav" src="image/sandwitch.svg" alt="">
-        <img id="day-nav" src="image/white-day.svg" alt="">
+        <img id="day-nav" src="image/white-night.svg" alt="">
     </div>
     <div class="contenaire">
         <h2 class="h2">Mentions légales</h2>
