--- a/1charactere.html
+++ b/1charactere.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="conteneur-text">
-            <h2>Plouf</h2>
+            <h2>Katorea</h2>
             <h3>Voix : Nino Lefort</h3>
             <div class="separation"></div>
             <div class="text-reponce">
