--- a/2charactere.html
+++ b/2charactere.html
@@ -17,6 +17,7 @@
                 <img class="eyes" src="image/charactere/eyesRainer.png" alt="oeuil divin de inazuma de Dendro">
                 <div class="equar"></div>
                 <div class="end"></div>
+                <img class="star" src="image/charactere/white-star.svg" alt="">
                 <a href="1charactere.html"><img src="image/charactere/tete1.png" alt="tete de Katorea"></a>
                 <a href="2charactere.html"><img src="image/charactere/tete2.png" alt="tete de Rainer"></a>
             </div>
