--- a/2charactere.html
+++ b/2charactere.html
@@ -48,7 +48,17 @@
         </div>
         <div class="top-conteneur">
             <h1>Pyro / Rainer</h1>
-           <a href="index.html"><h3>Retour à l’accueil</h3></a> 
+            <a href="index.html">
+                <h3>Retour à l’accueil</h3>
+            </a>
+        </div>
+        <div class="nav-bas">
+            <img class="responice-eyes" src="image/charactere/eyesRainer.png" alt="">
+            <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt=""></a>
+            <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt=""></a>
+            <div class="align-droit">
+                <a href="index.html"><img class="responcive-head" src="image/charactere/white-home.svg" alt=""></a>
+            </div>
         </div>
     </div>
 </body>
