fix bug titre charactere

--- a/2charactere.html
+++ b/2charactere.html
@@ -22,6 +22,7 @@
                 <a href="2charactere.html"><img src="image/charactere/tete2.png" alt="tete de Rainer"></a>
             </div>
         </div>
+        <h1 class="responsive-h1">Pyro / Rainer</h1>
         <div class="conteneur-text">
             <h2>Rainer</h2>
             <h3>Voix : Mael Ledrin</h3>
