--- a/1charactere.html
+++ b/1charactere.html
@@ -22,6 +22,7 @@
                 <a href="2charactere.html"><img src="image/charactere/tete2.png" alt="tete de Rainer"></a>
             </div>
         </div>
+        <h1 class="responsive-h1">Dendro / Katorea</h1>
         <div class="conteneur-text">
             <h2>Katorea</h2>
             <h3>Voix : Nino Lefort</h3>
