--- a/mentions.html
+++ b/mentions.html
@@ -20,7 +20,7 @@
                 <a href="index.html">
                     <h2>Accueil</h2>
                 </a>
-                <a href="data.html">
+                <a href="WheelMenu.html">
                     <h2>Nos données</h2>
                 </a>
                 <a href="1charactere.html">
@@ -113,7 +113,7 @@
             <h3>Accueil</h3>
         </a>
         <div class="espacement-footer"></div>
-        <a href="data.html">
+        <a href="WheelMenu.html">
             <h3>Nos données</h3>
         </a>
         <div class="espacement-footer"></div>
