add real text in home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 id="h1-titre" style="margin-top: -100px; color: rgb(0, 0, 0);"> L’impact de Genshin </h1>
             <img id="separation-svg-header" class="separation-svg-header" src="image/header-limitation-black.svg"
                 alt="">
-            <h2 id="h2-titre" style="color: rgb(0, 0, 0);"> Voir quel texte écrire </h2>
+            <h2 id="h2-titre" style="color: rgb(0, 0, 0);"> Descendre pour découvrir </h2>
         </div>
         <video autoplay muted loop id="nightHomePage" class="annim_home_page_night">
             <source src="animation/genshin-nuit.mp4" type="video/mp4">
@@ -65,34 +65,96 @@
         <img id="sond-nav" src="image/white-on.svg" alt="">
     </div>
     <div class="espacement-hauteur"></div>
+
     <div class="contenaire">
-        <h2 id="h2">Titre de l’article</h2>
-        <p id="p">Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum
-            fusce.
-            Justo sed hendrerit consectetur eu ut ullamcorper pellentesque velit. Sagittis ut eget pharetra mauris leo
-            diam. Scelerisque vitae tempor nullam netus rhoncus commodo. Nisl magna ultrices vitae ac. Aliquam in
-            pellentesque risus commodo volutpat et euismod malesuada ut. Nunc rutrum nulla dolor est. Sed molestie
-            libero fames nulla nisi ut magna eget interdum. Tristique scelerisque tellus dui lobortis iaculis elementum.
-            Molestie vestibulum venenatis mi nunc.</p>
 
-        <p id="p">Sed interdum risus semper justo sit sed duis ut ut. Integer consequat malesuada sed elementum ultrices
-            amet.
-            Urna habitasse diam tellus nullam ultrices ipsum erat mattis. Adipiscing mauris viverra scelerisque mattis
-            netus aliquet mauris tincidunt sodales. Et in vel nulla pretium duis adipiscing vulputate ultricies. Quis
-            integer tempor risus nullam amet arcu enim risus. Aliquam eget quisque sed nibh maecenas vitae amet
-            molestie. Duis tellus tortor gravida condimentum ultricies amet pretium in.
-            Vestibulum dolor suscipit tristique morbi. Egestas enim ac viverra odio ac quis. Fringilla scelerisque odio
-            mattis pulvinar nunc volutpat.</p>
 
-        <p id="p">Lorem ipsum dolor sit amet consectetur. Sed pharetra in morbi erat. Commodo scelerisque quis ultricies
-            laoreet amet dolor lobortis. Risus montes gravida et massa velit phasellus. Tempus gravida viverra facilisis
-            mi. Id facilisi eget habitasse quis tempor. Aliquam ut cursus phasellus vitae proin at facilisi parturient
-            ullamcorper. Mollis pellentesque nunc senectus nisl nunc. Praesent turpis donec porttitor aenean. Sagittis
-            mauris vitae sem eu tristique id. Purus mauris pellentesque quis habitant semper. Cras arcu id feugiat a
-            amet sed facilisi.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <h2 id="h2">Genshin Impact : le personnage que vous voudrez absolument acquérir !</h2>
+        <p id="p">Genshin Impact est un jeu connu pour ses nombreux personnages colorés, mais également pour inciter les
+            joueurs à dépenser sans compter pour les obtenir. Nous avons réfléchi à créer le personnage qui serait celui
+            capable de nous faire dépenser toutes nos économies.</p>
+
+        <h3 id="h3">Comment obtenir un personnage dans Genshin Impact ?</h3>
+
+        <p id="p">Genshin Impact est un jeu d’action sorti en 2020. Le jeu s’est rapidement créé une énorme communauté,
+            car il a l’avantage d’être gratuit, mais surtout de proposer des personnages aux styles uniques. Comme des
+            Pokémon, tous les joueurs rêvent de les obtenir tous, et ce par le biais de vœux.</p>
+            <p id="p">Leur obstacle ? Une méthode d’obtention limitée et coûteuse. Le système d’obtention de personnages de
+            Genshin Impact est basé sur des bannières. Tous les 20 jours, un personnage 5 étoiles spécial est proposé
+            parmi plusieurs personnages 5 étoiles “permanents”. Le joueur a 0,6 % de chance de tomber sur un personnage
+            5 étoiles, puis 50 % de chance d’obtenir le personnage spécial ou l’un des permanents. Le jeu a quand même
+            eu pitié de ses joueurs, car il assure un 5 étoiles obtenu au bout de 90 vœux. De plus, dans le cas où on
+            n’obtiendrait pas un personnage, il n’est pas perdu, car il peut réapparaître dans une future bannière.</p>
+            <p id="p">Ce système est donc appelé "bannière”. Au lancement du jeu, une seule bannière était proposée. Actuellement,
+            ce sont 2 bannières avec chacune un personnage 5 étoiles qui sont renouvelées tous les 20 jours.
+        </p>
+
+        <h3 id="h3">Combien devons-nous dépenser pour obtenir le personnage de nos rêves ?</h3>
+        
+
+        <p id="p">Les vœux sont des ressources rares dans le jeu : il n’est donc pas rare que les joueurs dépensent de l’argent pour obtenir le personnage spécial de leurs rêves. Cependant, l’argent disparaît vite, étant donné qu'un unique vœu coûte 2,64€. Pour être sûr d’obtenir un 5 étoiles, il faut donc débourser 237€, sachant que celui-ci obtenu ne sera pas forcément le personnage spécial de la bannière.</p>
+        <p id="p">Avec ces prix élevés, les développeurs doivent faire preuve d’inventivité pour créer des personnages qui suscitent l'intérêt des joueurs.</p>
+        <p id="p">Il n’est pas possible de savoir exactement combien a été dépensé pour un personnage. Cependant, <a target="_blank" href="https://genshinlab.com/genshin-impact-revenue-chart/">le site GenshinLab recense l’argent dépensé chaque jour sur l’App Store du marché chinois sur iOS.</a> Ces chiffres sont ensuite associés aux bannières en cours. En revanche, il est impossible de savoir précisément pour quel personnage un joueur dépense de l’argent, étant donné que deux personnages se partagent la même période d’évènement.</p>
+
+        <img src="image/accueil/graphique de GenshinLab.png" alt="Graphique des dépenses depuis la création du jeu en fonction des bannières, mis à jour le 09/01/2024 et extrait du site web Genshin Lab.">
+
+        <p id="p" class="desGraph">Graphique des dépenses depuis la création du jeu en fonction des bannières, mis à jour le 05/01/2024 et <a target="_blank" href="https://genshinlab.com/genshin-impact-revenue-chart/">extrait du site web Genshin Lab</a>.</p>
+
+        <h3 id="h3">Comment déterminer quel personnage se vendrait le mieux ?</h3>
+        <p id="p">Pour envisager le personnage qui se vendrait le mieux, nous avons d'abord calculé les moyennes de chaque apparition/réapparition des personnages afin de déterminer celui qui a actuellement suscité le plus d’achats. Voici le classement que nous avons obtenu :</p>
+        <img src="image/accueil/graphiqueJourClassmentPersonnage.png" alt="Graphique des moyennes dépensées en dollars américains pour chaque personnage réalisé par l’équipe.">
+
+        <p class="desGraph" id="p" >descGque des moyennes dépensées en dollars américains pour chaque personnage <a target="_blank" href="https://docs.google.com/spreadsheets/d/1gyHDBqRzyk1E1J7hyVR2AcEhotUTDCheKO6kVbVHACk/edit?usp=sharing">réalisé par l’équipe</a>.</p>
+
+        <p id="p">En nous basant sur ces résultats, nous avons compilé des listes de toutes les caractéristiques des personnages : les caractéristiques physiques (genre, taille, couleur et longueur des cheveux, couleur des yeux, couleur de peau, particularités physiques), les spécialités liées au combat (élément, arme, rôle dans une équipe), mais aussi leur rôle dans l’histoire (pays, affiliation, importance dans l’histoire). Une fois associées entre elles, nous avons pu déterminer pour chaque caractéristique celle pour laquelle, en moyenne, les joueurs ont déboursé le plus d’argent.</p>
+        <p id="p" class="desGraph"> <a href="data.html">Découvrez toutes nos données ici</a></p>
+
+        <h3 id="h3">Et nos personnages ?</h3>
+        <p id="p">Basés sur ces résultats, nous avons donc créé deux personnages : celui qui se vendrait le plus et celui qui serait le moins désiré. Évidemment, ces données ne sont pas parfaites, vu que nous nous sommes basés sur des moyennes de moyennes. Cependant, si l’on se fie à nos chiffres, <a href="1charactere.html">voici Katorea</a>. Ce personnage devrait séduire la majorité des joueurs prêts à dépenser sans compter pour l’obtenir. En revanche, <a href="2charactere.html">Rainer</a> devrait quant à lui faire fuir tous les jours.</p>
+        <p id="p" class="desGraph"> <a href="1charactere.html">Découvrez en exclusivité nos personnages ici !</a></p>
+
+        <p id="p">Site réalisé par Julie RONDOF, Elodie LAISNE, Maël LEDRIN, et Nino LEFORT.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
-
-
     <footer id="footer">
         <h2 style="color: white;">L’impact de Genshin</h2>
         <img class="separation-svg-footer" src="image/footer-limitation.svg" alt="">
