ajout blanc ou on est es

--- a/1charactere.html
+++ b/1charactere.html
@@ -54,6 +54,7 @@
             </a>
         </div>
         <div class="nav-bas">
+            <div class="white"></div>
             <img class="responice-eyes" src="image/charactere/eyesDendro.png" alt="">
             <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt=""></a>
             <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt=""></a>
@@ -61,6 +62,7 @@
                 <a href="index.html"><img class="responcive-head" src="image/charactere/white-home.svg" alt=""></a>
             </div>
         </div>
+
     </div>
 </body>
 
