--- a/2charactere.html
+++ b/2charactere.html
@@ -54,6 +54,7 @@
             </a>
         </div>
         <div class="nav-bas">
+            <div class="white"></div>
             <img class="responice-eyes" src="image/charactere/eyesRainer.png" alt="">
             <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt=""></a>
             <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt=""></a>
