fix header footer

--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/info.css"><link rel="stylesheet" href="css/header_footer.css">
+  <link rel="stylesheet" href="css/info.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/header_footer.css">
+  <link rel="stylesheet" href="font/font.css">
   <title>Impact de Genshin - Nos données</title>
 </head>
 <body>
+    <div class="bodyflex">
     <div id="conteneur-flou"></div>
     <div id="barre-menu">
         <img id="close-nav" src="image/black-close.svg" alt="">
@@ -533,8 +537,8 @@
   </div>
 </div>
 </div>
+</div>
 <script src="js/info.js"></script>
-</body>
 
 <footer id="footer">
     <h2 style="color: white;">L’impact de Genshin</h2>
@@ -556,8 +560,9 @@
         <h3>Mentions légales</h3>
     </a>
     <div class="espacement-footer"></div>
-    <a href="https://www.youtube.com/watch?v=4xnsmyI5KMQ&t=28s&pp=ygUNZHJhZ29uIGRhbmNlIA%3D%3D"><img
-            src="image/star-footer.svg" alt="">
+    <a href="https://www.youtube.com/watch?v=4xnsmyI5KMQ&t=28s&pp=ygUNZHJhZ29uIGRhbmNlIA%3D%3D"><img src="image/star-footer.svg" alt="">
 </footer>
 <script src="js/footer_header.js"></script>
+
+</body>
 </html>
