ajout du mode a dans le mode nuit

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="espacement-hauteur"></div>
 
-    <div class="contenaire">
+    <div class="contenaire" id="contenaire">
 
         <h2 id="h2">Genshin Impact : le personnage que vous voudrez absolument acquérir !</h2>
         <p id="p">Genshin Impact est un jeu connu pour ses nombreux personnages colorés, mais également pour inciter les
@@ -100,7 +100,7 @@
         <p id="p">Avec ces prix élevés, les développeurs doivent faire preuve d’inventivité pour créer des
             personnages qui suscitent l'intérêt des joueurs.</p>
         <p id="p">Il n’est pas possible de savoir exactement combien a été dépensé pour un personnage.
-            Cependant, <a target="_blank" href="https://genshinlab.com/genshin-impact-revenue-chart/">le site
+            Cependant, <a id="a" target="_blank" href="https://genshinlab.com/genshin-impact-revenue-chart/">le site
                 GenshinLab
                 recense l’argent dépensé chaque jour sur l’App Store du marché chinois sur iOS.</a> Ces chiffres
             sont ensuite associés aux bannières en cours. En revanche, il est impossible de savoir précisément
@@ -112,7 +112,7 @@
                 alt="Graphique des dépenses depuis la création du jeu en fonction des bannières, mis à jour le 09/01/2024 et extrait du site web Genshin Lab.">
             <p id="p" class="desGraph">Graphique des dépenses depuis la création du jeu en fonction des bannières,
                 mis à
-                jour le 05/01/2024 et <a target="_blank"
+                jour le 05/01/2024 et <a id="a" target="_blank"
                     href="https://genshinlab.com/genshin-impact-revenue-chart/">extrait
                     du site web Genshin Lab</a>.</p>
         </div>
@@ -123,11 +123,11 @@
             chaque apparition/réapparition des personnages afin de déterminer celui qui a actuellement suscité le plus
             d’achats. Voici le classement que nous avons obtenu :</p>
         <div class="contenaire-img">
-            <img src="image/accueil/graphiqueJourClassmentPersonnage.png"
+            <img id="graph" src="image/accueil/graphiqueJourClassmentPersonnage.png"
                 alt="Graphique des moyennes dépensées en dollars américains pour chaque personnage réalisé par l’équipe.">
 
-            <p class="desGraph" id="p">descGque des moyennes dépensées en dollars américains pour chaque personnage <a
-                    target="_blank"
+            <p class="desGraph" id="p">descGque des moyennes dépensées en dollars américains pour chaque personnage <a id="a"
+                    target="_blank" 
                     href="https://docs.google.com/spreadsheets/d/1gyHDBqRzyk1E1J7hyVR2AcEhotUTDCheKO6kVbVHACk/edit?usp=sharing">réalisé
                     par l’équipe</a>.</p>
         </div>
@@ -137,16 +137,16 @@
             une équipe), mais aussi leur rôle dans l’histoire (pays, affiliation, importance dans l’histoire). Une fois
             associées entre elles, nous avons pu déterminer pour chaque caractéristique celle pour laquelle, en moyenne,
             les joueurs ont déboursé le plus d’argent.</p>
-        <p id="p" class="desGraph"> <a href="data.html">Découvrez toutes nos données ici</a></p>
+        <p id="p" class="desGraph"> <a id="a" href="data.html">Découvrez toutes nos données ici</a></p>
 
         <h3 id="h3">Et nos personnages ?</h3>
         <p id="p">Basés sur ces résultats, nous avons donc créé deux personnages : celui qui se vendrait le plus et
             celui qui serait le moins désiré. Évidemment, ces données ne sont pas parfaites, vu que nous nous sommes
-            basés sur des moyennes de moyennes. Cependant, si l’on se fie à nos chiffres, <a
+            basés sur des moyennes de moyennes. Cependant, si l’on se fie à nos chiffres, <a id="a"
                 href="1charactere.html">voici Katorea</a>. Ce personnage devrait séduire la majorité des joueurs prêts à
-            dépenser sans compter pour l’obtenir. En revanche, <a href="2charactere.html">Rainer</a> devrait quant à lui
+            dépenser sans compter pour l’obtenir. En revanche, <a id="a" href="2charactere.html">Rainer</a> devrait quant à lui
             faire fuir tous les jours.</p>
-        <p id="p" class="desGraph"> <a href="1charactere.html">Découvrez en exclusivité nos personnages ici !</a></p>
+        <p id="p" class="desGraph"> <a id="a" href="1charactere.html">Découvrez en exclusivité nos personnages ici !</a></p>
 
         <p id="p">Site réalisé par Julie RONDOF, Elodie LAISNE, Maël LEDRIN, et Nino LEFORT.</p>
 
