--- a/mentions.html
+++ b/mentions.html
@@ -46,10 +46,10 @@
         <div class="text-contenaire">
             <div class="text-box1">
                 <h3 class="h3">Source :</h3>
-                <p class="p"><a target="_blank" href="https://genshinlab.com/genshin-impact-revenue-chart/">Genshin Lab</a></p>
+                <p class="p"><a id="a" target="_blank" href="https://genshinlab.com/genshin-impact-revenue-chart/">Genshin Lab</a></p>
 
                 <h3 class="h3">Tableau de données crées :</h3>
-                <p class="p"><a target="_blank"
+                <p class="p"><a id="a" target="_blank"
                         href="https://docs.google.com/spreadsheets/d/1gyHDBqRzyk1E1J7hyVR2AcEhotUTDCheKO6kVbVHACk/edit?usp=sharing">Tableur
                         de données</a></p>
 
@@ -60,27 +60,27 @@
 
                 <h3 class="h3">Vidéo :</h3>
                 <p class="p">Vidéo de la page d’accueil:</p>
-                <p class="p">Tiré du jeux <a target="_blank" href="https://genshin.hoyoverse.com/fr">Genshin Impact</a></p>
+                <p class="p">Tiré du jeux <a id="a" target="_blank" href="https://genshin.hoyoverse.com/fr">Genshin Impact</a></p>
 
                 <h3 class="h3">Equipe :</h3>
                 <div class="link-name">
                     <p class="p">Elodie Laisne :</p>
-                    <p class="p"><a target="_blank" href="https://www.linkedin.com/in/elodie-laisne-a12987252/">Linkedin</a></p>
+                    <p class="p"><a id="a" target="_blank" href="https://www.linkedin.com/in/elodie-laisne-a12987252/">Linkedin</a></p>
                 </div>
                 <div class="link-name">
                     <p class="p">Mael Ledrin :</p>
-                    <p class="p"><a target="_blank" href="https://thesloum-ml.netlify.app/">Site Web</a></p>
-                    <p class="p"><a target="_blank" href="https://www.linkedin.com/in/ma%C3%ABl-l-900945252/">Linkedin</a></p>
+                    <p class="p"><a id="a" target="_blank" href="https://thesloum-ml.netlify.app/">Site Web</a></p>
+                    <p class="p"><a id="a" target="_blank" href="https://www.linkedin.com/in/ma%C3%ABl-l-900945252/">Linkedin</a></p>
                 </div>
                 <div class="link-name">
                     <p class="p">Nino Lefort :</p>
-                    <p class="p"><a target="_blank" href="https://nino-lefort-cv.netlify.app/">Site Web</a></p>
-                    <p class="p"><a target="_blank" href="https://www.linkedin.com/in/nino-lefort-6b0938251/">Linkedin</a></p>
+                    <p class="p"><a id="a" target="_blank" href="https://nino-lefort-cv.netlify.app/">Site Web</a></p>
+                    <p class="p"><a id="a" target="_blank" href="https://www.linkedin.com/in/nino-lefort-6b0938251/">Linkedin</a></p>
                 </div>
                 <div class="link-name">
                     <p class="p">Julie Rondof :</p>
-                    <p class="p"><a target="_blank" href="https://portfoliorondof.netlify.app/">Site Web</a></p>
-                    <p class="p"><a target="_blank" href="https://www.linkedin.com/in/julie-rondof/">Linkedin</a></p>
+                    <p class="p"><a id="a" target="_blank" href="https://portfoliorondof.netlify.app/">Site Web</a></p>
+                    <p class="p"><a id="a" target="_blank" href="https://www.linkedin.com/in/julie-rondof/">Linkedin</a></p>
                 </div>
             </div>
             <div class="espacement-contenaire"></div>
