--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -434,7 +434,6 @@
                 <h1>Genres</h1>
                 <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
-            <div class="graph">
                 <div class="graph">
                     <div class="bar-graph">
                         <p>Femme</p>
@@ -451,7 +450,6 @@
                         </div>
                     </div>
                 </div>
-                  </div>
             </div>
         
         </div>
@@ -497,7 +495,7 @@
     <img src="images/Center.svg" alt="" class="center">
   <div class="wheel-item item-1">
     <div class="text-container">
-        <div class="icon"><img src="images/Effects.png" class="ico"  onclick="showInformationBox('informationBoxElements')" alt=""> <img src="Shing.png" class="undershine" alt=""></div>
+        <div class="icon"><img src="images/Effects.png" class="ico"  onclick="showInformationBox('informationBoxElements')" alt=""> </div>
     </div>
   </div>
   <div class="wheel-item item-2">
