responsive add index

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <img id="graph" src="image/accueil/graphiqueJourClassmentPersonnage.png"
                 alt="Graphique des moyennes dépensées en dollars américains pour chaque personnage réalisé par l’équipe.">
 
-            <p class="desGraph" id="p">descGque des moyennes dépensées en dollars américains pour chaque personnage <a id="a"
+            <p class="desGraph" id="p">Graphique des moyennes dépensées en dollars américains pour chaque personnage <a id="a"
                     target="_blank" 
                     href="https://docs.google.com/spreadsheets/d/1gyHDBqRzyk1E1J7hyVR2AcEhotUTDCheKO6kVbVHACk/edit?usp=sharing">réalisé
                     par l’équipe</a>.</p>
