--- a/mentions.html
+++ b/mentions.html
@@ -61,7 +61,7 @@
                 <h3 class="h3">Vidéo :</h3>
                 <p class="p">Vidéo de la page d’accueil:</p>
                 <p class="p">Tiré du jeux <a id="a" target="_blank" href="https://genshin.hoyoverse.com/fr">Genshin Impact</a></p>
-
+                <p class="p"><a id="a" href="https://www.hoyolab.com/article/143107">© All rights reserved by miHoYo. Other properties belong to their respective owners</a></p>
                 <h3 class="h3">Equipe :</h3>
                 <div class="link-name">
                     <p class="p">Elodie Laisne :</p>
