--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Impact de Genshin - Acceuil</title>
+    <title>Impact de Genshin - Accueil</title>
 </head>
 
 <body>
